@@ -16,6 +16,7 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jetty.port>8688</jetty.port>
     </properties>
     
     <dependencies>
@@ -26,10 +27,38 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>organisation-security</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-quartz</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
         <!--Runtime-->
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -70,6 +99,20 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${jdbc.groupId}</groupId>
+            <artifactId>${jdbc.artifactId}</artifactId>
+            <version>${jdbc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
         </dependency>
 
         <!--Provided-->
@@ -116,8 +159,6 @@
                                     -XX:+UseConcMarkSweepGC
                                     -XX:+CMSPermGenSweepingEnabled
                                     -XX:+CMSClassUnloadingEnabled
-                                    -Dmes.conf.path=${mes.conf.path}
-                                    -Dmes.log.path=${mes.log.path}
                                 </cargo.jvmargs>
                             </properties>
                         </configuration>
@@ -193,6 +234,31 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.3.0.v20150612</version>
+                <configuration>
+                    <httpConnector>
+                        <port>8888</port>
+                        <idleTimeout>60000</idleTimeout>
+                    </httpConnector>
+                    <scanIntervalSeconds>3</scanIntervalSeconds>
+                    <webApp>
+                        <contextPath>/</contextPath>
+                    </webApp>
+                    <jvmArgs>
+                        -Xms1024m
+                        -Xmx1024m
+                        -XX:MaxNewSize=512m
+                        -XX:PermSize=256m
+                        -XX:MaxPermSize=512m
+                        -XX:+UseConcMarkSweepGC
+                        -XX:+CMSPermGenSweepingEnabled
+                        -XX:+CMSClassUnloadingEnabled
+                    </jvmArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
